--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>thymeleaf-custom-layout</groupId>
     <artifactId>thymeleaf-custom-layout</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0.0.RELEASE</version>
     <packaging>jar</packaging>
 
     <name>Thymeleaf Custom Layout</name>
