--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>pl.codeleak</groupId>
     <artifactId>thymeleaf-custom-layout</artifactId>
-    <version>2.0-SNAPSHOT</version>
+    <version>2.0.0.RELEASE</version>
     <packaging>jar</packaging>
 
     <name>Thymeleaf Custom Layout</name>
